# slack-approval

./: .dockerignore  .env.example  .tagpr  Cargo.toml  Dockerfile  README.md  Taskfile.yml  action.yml  package-lock.json  package.json
.github/actions/release/: action.yml
.github/workflows/: ci.yml  publish.yml  tagpr.yml  test.yml
src/: constants.ts  index.ts  main.rs
src/helper/: input_helper.test.ts  input_helper.ts  user_helper.test.ts  user_helper.ts
src/services/: slack.rs
src/services/github/: github_info.rs  github_inputs.rs  input_utils.rs  mod.rs
